# make-automation-toolkit

./: .gitattributes  .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
docs/: ai-agents.md  authentication.md  best-practices.md  mcp-integration.md  mcp-toolboxes.md  quickstart.md
prompts/: README.md  _template.md  customer_support.md  data_enrichment.md  document_and_media_processing.md  document_processing.md  lead_generation.md  research_summarisation.md
skill/: README.md  make-automation-skill.md
src/: __init__.py  make_client.py  validate_blueprint.py
src/blueprints/: ai_local_agent.json  basic_webhook.json  customer_tracking.json  ecommerce_order_processing.json  schema.json
src/examples/: 01_deploy_scenario.py  02_manage_data_store.py  03_configure_agent.py  04_setup_mcp.py  05_full_deployment.py  06_deploy_scenario_agent.py  07_builtin_ai_tools.py  08_mcp_toolbox_workflow.py
tests/: test_make_client.py
