[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "make-automation-toolkit"
version = "1.0.0"
description = "Python SDK for deploying and orchestrating Make.com automations"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.10"
dependencies = [
    "requests>=2.31.0",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "responses>=0.25.0",
    "jsonschema>=4.0.0",
    "flake8",
    "pytest",
    "pytest-cov",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]

[tool.flake8]
max-line-length = 120
ignore = ["E501", "W503"]
